# mecab-ko_cmake

./: CHANGES.md  CMakeLists.txt  README.md  mecabkorc.in
.github/workflows/: cmake-multi-platform.yml
mecab-ko-dic/: CMakeLists.txt
mecab-ko-dic-pip/: CMakeLists.txt
src/: char_property.cpp  char_property.h  common.h  connector.cpp  connector.h  context_id.cpp  context_id.h  darts.h  dictionary.cpp  dictionary.h  dictionary_compiler.cpp  dictionary_generator.cpp  dictionary_rewriter.cpp  dictionary_rewriter.h  eval.cpp  feature_index.cpp  feature_index.h  freelist.h  iconv_utils.cpp  iconv_utils.h  lbfgs.cpp  lbfgs.h  learner.cpp  learner_node.h  learner_tagger.cpp  learner_tagger.h  libmecab-ko.cpp  mecab-cost-train.cpp  mecab-dict-gen.cpp  mecab-dict-index.cpp  mecab-ko.cpp  mecab-ko.h  mecab-system-eval.cpp  mecab-test-gen.cpp  mmap.h  nbest_generator.cpp  nbest_generator.h  param.cpp  param.h  scoped_ptr.h  (+15 more)
tools/: prepare_build_environment.sh  setup.py
tools/dummy/: __init__.py
